<resources>
    <string name="app_name">COVID Info</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">COVID Info</string>
    <string name="nav_header_subtitle">main.cpp team</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_today">Today Statistics</string>
    <string name="menu_tweeter">Tweeter MZ</string>
    <string name="menu_hospitals">Hospital Location</string>
    <string name="menu_suspicion">Infection suspicion</string>
    <string name="menu_test">TEST</string>
    <string name="today_select_country">Wybierz kraj</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="table_sum_text">Suma zachorowań</string>
    <string name="table_new_text">Nowe zakażenia</string>
    <string name="suspicion_main_title">Podejrzenie Infekcji</string>
    <string name="suspicion_main_subtitle">Czy podejrzewasz u siebie \nzarażenie wirusem SARS-CoV-2?</string>
    <string name="suspicion_main_content">Niniejszy panel wskaże ci wszystkie niezbędne czynności, które należy podjąć aby zminimalizować ryzyko zarażenia innych, a także przedstawi niezbędne kroki umożliwiające uzyskanie fachowej pomocy specjalistów w jak najkrótszym czasie.</string>
    <string name="suspicion_content_desc_background">TODO</string>
    <string name="suspicion_content_desc_menu_btn">TODO</string>
    <string name="today_source1">Dane statystyczne z: https://documenter.getpostman.com/view/2220438/SzYevv9u?version=latest</string>
    <string name="today_source2">Dane z podsumowaniem dla państw: https://documenter.getpostman.com/view/10808728/SzS8rjbc</string>
    <string name="symptoms_second_subtitle">Występowanie tych symptomów MOŻE oznaczać zarażenie chorobą COVID-19</string>
    <string name="symptoms_second_content">Nie należy samemu stawiać diagnozy, gdyż część z dolegliwości dotyczy także zarażenia zwykłym wirusem grypy.</string>
    <string name="symptoms_first_content">- Gorączka \n- Złe samopoczucie\n- Suchy Kaszel\n- Utrata smaku\n- Utrata węchu</string>
    <string name="symptoms_title">Symptomy</string>
    <string name="symptoms_source">Na podstawie https://www.bma.org.uk/media/2768/bma-covid-19-risk-assessment-tool-july2020.pdf</string>
    <string name="symptoms_third_title">Kalkulator grupy ryzyka</string>
    <string name="symptoms_third_description">Klikaj na przyciski poniżej zmieniając ich wartość aby sprawdzić w jakiej grupie ryzyka się znajdujesz.</string>
    <string name="symptoms_age_btn">wiek</string>
    <string name="symptoms_sex_btn">płeć</string>
    <string name="symptoms_ethnics_btn">pochodzenie etniczne</string>
    <string name="symptoms_diabetes_btn">cukrzyca i otyłość</string>
    <string name="symptoms_heart_btn">choroba sercowo-naczyniowa</string>
    <string name="symptoms_lungs_btn">Choroba płuc</string>
    <string name="symptoms_cancer_btn">nowotwór złośliwy</string>
    <string name="symptoms_rheumatologic_btn">stany reumatologiczne</string>
    <string name="symptoms_immunity_btn">terapia immunosupresyjna</string>
    <string name="symptoms_risk_text">Grupa ryzyka:</string>
    <string name="symptoms_calculate_btn">Wyznacz grupę ryzyka</string>
    <string name="symptoms_content_desc_first_img">TODO</string>
    <string name="symptoms_content_desc_second_img">TODO</string>
    <string name="actions_title">Zadbaj o zdrowie innych</string>
    <string name="actions_first_content">W przypadku wystąpienia jakichkolwiek symptomów pamiętaj, że nie tylko ty możesz zachorować.</string>
    <string name="actions_first_sub_content">Aby zadbać o ludzi w swoim otoczeniu noś maseczkę, by ograniczyć rosprzestrzenianie się wirusa.</string>
    <string name="actions_subtitle">Pamiętaj o dezynfekcji rąk</string>
    <string name="actions_second_sub_content">Pamiętaj aby dotykając takich rzeczy w miarę możliwości je dezynfekować, a także by myć ręce środkami dezynfekcyjnymi.</string>
    <string name="actions_second_content">Dotykając klamek, uchwytów, czy elementów takich jak baterie kranowe umożliwiamy wirusowi łatwiejsze rozprzestrzenianie się.</string>
    <string name="actions_content_desc_first_img">TODO</string>
    <string name="actions_content_desc_second_img">TODO</string>
    <string name="teleHelp_title">Umów się na teleporadę</string>
    <string name="teleHelp_first_content">Jeśli to możliwe należy w pierwszej kolejności skontaktować się z lekażem pierwszego kontaktu.</string>
    <string name="teleHelp_first_sub_content">W przypadku, gdy kontakt nie może zostać nawiązany należy umówić się na teleporadę klikając w poniższy przycisk.</string>
    <string name="teleHelp_second_content">Udając się w miejsca zatłoczone możesz stanowić zagrożenie dla innych. Zadbaj o bezpieczeństwo ludzi w swoim otoczeniu.</string>
    <string name="teleHelp_second_sub_content">Teleporada nie wymaga przybycia do żadnej placówki i może, a co więcej powinna być zrealizowana na przykład poprzez rozmowę telefoniczną.</string>
    <string name="teleHelp_subtitle">Nie przychodź do przychodni \nani na SOR</string>
    <string name="teleHelp_tele_btn">Teleporada</string>
    <string name="teleHelp_content_desc_first_img">TODO</string>
    <string name="teleHelp_content_desc_second_img">TODO</string>
    <string name="usefulTelephones_title">Przydatne telefony</string>
    <string name="usefulTelephones_first_subtitle">Jeśli miałeś kontakt z osobą chorą lub zakażoną koronawirusem, to bezzwłocznie powiadom:</string>
    <string name="usefulTelephones_second_subtitle">Jeśli masz pytania związane z koronawirusem, zadzwoń na:</string>
    <string name="usefulTelephones_third_subtitle">Jeżeli masz pytania, a jesteś za granicą, to dzwoń pod numer:</string>
    <string name="usefulTelephones_sub_content">połączenia płatne zgodne z cennikiem operatora</string>
    <string name="usefulTelephones_first_title">Poniżej znajdują się odnośniki z przydatnymi telefonami. W przypadku opisanych sytuacji nie wahaj się pod nie dzwonić.</string>
    <string name="usefulTelephones_second_title">-</string>
    <string name="usefulTelephones_telephone_sanitary">Stacja sanitarno-epidemiologiczna</string>
    <string name="usefulTelephones_telephone_info">Infolinia dla przebywających za granicą</string>
    <string name="usefulTelephones_telephone_nfz">Infolinia Narodowego Funduszu Zdrowia</string>
    <string name="usefulTelephones_content_desc_img">TODO</string>
    <string name="nearestHospital_title">Najbliższy szpital zakaźny</string>
    <string name="nearestHospital_disclaimer">Aby użyć przycisku należy zezwolić na udostępnienie swojej lokacji, a także ustawienie wysokiej dokładności. Dane NIE są przechowywane ani przekazywane żadnym osobom trzecim.</string>
    <string name="nearestHospital_first_subtitle">W tej sekcji można wyszukać najbliżej położony szpital zakaźny. Użycie tej funkcji wymaga połączenia z internetem.</string>
    <string name="nearestHospital_second_subtitle">-</string>
    <string name="nearestHospital_go_to_map">Pokaż na mapie</string>
    <string name="nearestHospital_content_desc_first_img">TODO</string>
    <string name="nearestHospital_content_desc_second_img">TODO</string>
    <string name="nearestHospital_content_desc_third_img">NONE</string>
    <string name="vaccine_main_title">Sczepienia</string>
    <string name="vaccine_main_subtitle">Szczepionki </string>
    <string name="vaccine_main_content">Niniejszy panel pokaże Ci wagę sczepionek, jak się na nie zapisać oraz dane statystyczne dotyczące ich.</string>
    <string name="vaccine_content_desc_background">TODO</string>
    <string name="vaccine_content_desc_menu_btn">TODO</string>
    <string name="vaccine_source1">Dane statystyczne z: https://github.com/owid/covid-19-data/blob/master/public/data/vaccinations/vaccinations.csv</string>
    <string name="vaccinations_graph">Liczba zaszczepionych</string>
    <string name="vaccination_percentage">Liczba szczepień</string>
    <string name="why_vaccinate">Firmy produkujące szczepionki</string>
    <string name="save_live">Pfizer</string>
    <string name="stop_covid">Skuteczność szczepionki Pfizera szacuje się na około 95%. Podawana dawka jest relatywnie niska i wynosi 30µg. Produkt podawany jest domięśniowo jako cykl 2 dawek (0,3 ml każda) w odstępie co najmniej 21 dni. Szczepionka może nie zapewniać pełnej ochrony przed upływem co najmniej 7 dni od otrzymania drugiej dawki.</string>
    <string name="stop_covid2">Moderna</string>
    <string name="save_close_ones">Moderna oferuje szczepionkę o 94% skuteczności lecz przy 100µg dawkach. Produkt podawany jest domięśniowo jako cykl 2 dawek (0,5 ml każda) w odstępie co najmniej 28 dni. Szczepionka może nie zapewniać pełnej ochrony przed upływem co najmniej 14 dni od otrzymania drugiej dawki.</string>
    <string name="vaccine_minimum50">Według informacji obu producentów, aby usyskać odporność niezbędne jest przyjęcie dwóch dawek substancji.</string>
    <string name="vaccine_peace">Zyskasz spokój</string>
    <string name="vaccine_close_ones2">Szczepiąc się, zyskasz wewnętrzny spokój, wynikający z bezpieczeństwa własnego i najbliższych.</string>
    <string name="vaccine_safe">Szczepionki są bezpieczne</string>
    <string name="vaccine_safe2">Szczepionki są badane przez polskie i unijne instytucje. Ich dopuszczenie do użytku jest zależne od decyzji Europejskiej Agencji Lekowej.</string>
    <string name="vaccine_inspection">Zostaniesz zbadany</string>
    <string name="vaccine_heath">Przed szczepieniem zostaniesz przebadany przez lekarza. Dzięki temu sprawdzisz swój aktualny stan zdrowia.</string>
    <string name="vaccine_normal">Dzięki Tobie szybciej wrócimy do normalności!</string>
    <string name="vaccine_normal_reasons">Powrót do normalności oznacza:\n • odejście od maseczek,\n • swobodne spotkania z rodziną i przyjaciółmi,\n • powrót dzieci do szkół i rozwój ich kompetencji społecznych,\n • dalszy rozwój gospodarki,\n • ochronę miejsc pracy oraz szansę na nowe zatrudnienia,\n • swobodny dostęp do basenów, siłowni, kin i teatrów,\n • wakacje bez ograniczeń,\n • poprawę jakości życia nas wszystkich.</string>
    <string name="vaccine_normal2">Szczepiąc się, przyczyniasz się do szybszego znoszenia ograniczeń i powrotu nas wszystkich do normalnego życia.</string>
    <string name="authors_project">PROJEKT</string>
    <string name="authors_title">COVID Info</string>
    <string name="authors_jarek">Jarosław Drzymalski</string>
    <string name="authors_patryk">Patryk Amsolik</string>
    <string name="authors_jakub">Jakub Pietras</string>
    <string name="authors_icons">Wykorzystano ikony ze strony www.flaticon.com</string>
    <string name="authors_year">2020</string>
    <string name="authors_description_logo">TODO</string>
    <string name="vitali"><a href="https://www.flaticon.com/authors/vitaly-gorbachev" title="Vitaly Gorbachev">Vitaly Gorbachev</a></string>
    <string name="bqlqn"><a href="https://www.flaticon.com/authors/bqlqn" title="bqlqn">bqlqn</a></string>
    <string name="roundicons"><a href="https://www.flaticon.com/authors/roundicons" title="Roundicons">Roundicons</a></string>
    <string name="dimitri13"><a href="https://www.flaticon.com/authors/dmitri13" title="dmitri13">dmitri13</a></string>
    <string name="vectors_market"><a href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market">Vectors Market</a></string>
    <string name="monkik"><a href="https://www.flaticon.com/authors/monkik" title="monkik">monkik</a></string>
    <string name="freepik"><a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a></string>
    <string name="pixel_meetup"><a href="https://www.flaticon.com/authors/pixelmeetup" title="Pixelmeetup">Pixelmeetup</a></string>
</resources>