<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_today" />
        <item
            android:id="@+id/nav_tweeter"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_tweeter" />
        <item
            android:id="@+id/nav_hospitals"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_hospitals" />
        <item
            android:id="@+id/nav_suspicion"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_suspicion" />
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_test" />
    </group>
</menu>