<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/selectorAuthorsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.authors.AuthorsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/authorsMenuBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="#00FFFFFF"
                android:padding="20dp"
                app:layout_anchorGravity="end|bottom"
                app:srcCompat="@drawable/ic_menu_button" />

            <TextView
                android:id="@+id/authorsJakub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/authorsPatryk"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/authors_jakub"
                android:textAlignment="center"
                android:textColor="#D8FFFFFF"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/authorsProjectSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/roboto"
                android:text="@string/authors_project"
                android:textAlignment="center"
                android:textColor="#9CFFFFFF"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/authorsProjectTitle"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="78dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="82dp"
                android:contentDescription="@string/authors_description_logo"
                android:scaleX="1"
                android:scaleY="1"
                android:src="@drawable/ic_covid_info"
                tools:scaleType="centerCrop" />

            <TextView
                android:id="@+id/authorsPatryk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/authorsJarek"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/authors_patryk"
                android:textAlignment="center"
                android:textColor="#D8FFFFFF"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/authorsIcons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/authorsJakub"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/authors_icons"
                android:textAlignment="center"
                android:textColor="#A4FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/authorsFlatIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/authorsIcons"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/roboto_medium"
                android:text="Animowane ikony ze strony: https://lottiefiles.com"
                android:textAlignment="center"
                android:textColor="#A4FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/authorsJarek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/authors_jarek"
                android:textAlignment="center"
                android:textColor="#D8FFFFFF"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/layout_souces1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/authorsFlatIcon"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/icon1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/roboto"
                    android:text="@string/vitali"
                    android:textAlignment="center"
                    android:textColor="#7CB342"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/icon7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/roundicons"
                    android:textAlignment="center"
                    android:layout_marginStart="15dp"
                    android:textColor="#7CB342"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/icon3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:layout_marginStart="15dp"
                    android:text="@string/monkik"
                    android:textColor="#7CB342"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/icon6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"

                    android:fontFamily="@font/roboto"
                    android:text="@string/bqlqn"
                    android:textAlignment="center"
                    android:textColor="#7CB342"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_souces2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/layout_souces1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/icon2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/vectors_market"
                    android:textAlignment="center"
                    android:textColor="#7CB342"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/icon8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/dimitri13"
                    android:textAlignment="center"
                    android:textColor="#7CB342"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/icon4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"

                    android:fontFamily="@font/roboto"
                    android:text="@string/freepik"
                    android:textColor="#7CB342"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/icon5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/pixel_meetup"
                    android:textColor="#7CB342"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/authorsYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_souces2"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginStart="0dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/authors_year"
                android:textAlignment="center"
                android:textColor="#D8FFFFFF"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/authorsProjectTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/authorsProjectSub"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="-15dp"
                android:layout_marginEnd="0dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/authors_title"
                android:textAlignment="center"
                android:textColor="#D8FFFFFF"
                android:textSize="60sp" />
        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>