<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_today">

    <fragment
        android:id="@+id/nav_today"
        android:name="com.drzymalski.covidinfo.ui.todayIllness.TodayIllnessFragment"
        android:label="@string/menu_today"
        tools:layout="@layout/fragment_today" >
        <action
            android:id="@+id/action_nav_today_to_nav_selector"
            app:destination="@id/nav_selector"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/slide_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_compare"
        android:name="com.drzymalski.covidinfo.ui.compare.CompareFragment"
        android:label="menu_compare"
        tools:layout="@layout/fragment_compare" >
        <action
            android:id="@+id/action_nav_compare_to_nav_selector"
            app:destination="@id/nav_selector"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/slide_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_tweeter"
        android:name="com.drzymalski.covidinfo.ui.twitter.TwitterFragment"
        android:label="@string/menu_tweeter"
        tools:layout="@layout/fragment_tweeter" >
        <action
            android:id="@+id/action_nav_tweeter_to_nav_selector"
            app:destination="@id/nav_selector"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>

    <fragment
        android:id="@+id/nav_hospitals"
        android:name="com.drzymalski.covidinfo.ui.hospitals.HospitalsFragment"
        android:label="@string/menu_suspicion"
        tools:layout="@layout/fragment_hospitals" >
        <action
            android:id="@+id/action_nav_hospitals_to_nav_selector"
            app:destination="@id/nav_selector"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>

    <fragment
        android:id="@+id/nav_suspicion"
        android:name="com.drzymalski.covidinfo.ui.suspicion.SuspicionFragment"
        android:label="@string/menu_suspicion"
        tools:layout="@layout/fragment_suspicion" >
        <action
            android:id="@+id/action_nav_suspicion_to_nav_selector"
            app:destination="@id/nav_selector"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>
    <fragment
        android:id="@+id/nav_selector"
        android:name="com.drzymalski.covidinfo.ui.selector.SelectorFragment"
        android:label="SELECTOR"
        tools:layout="@layout/fragment_selector"

        >
        <action
            android:id="@+id/action_nav_selector_to_nav_authors"
            app:destination="@id/nav_authors"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@anim/slide_out"
            app:popEnterAnim="@anim/slide_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_nav_selector_to_nav_suspicion"
            app:destination="@id/nav_suspicion"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@anim/slide_out"
            app:popEnterAnim="@anim/slide_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_nav_selector_to_nav_hospitals"
            app:destination="@id/nav_hospitals"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@anim/slide_out"
            app:popEnterAnim="@anim/slide_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_nav_selector_to_nav_tweeter"
            app:destination="@id/nav_tweeter"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@anim/slide_out"
            app:popEnterAnim="@anim/slide_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_nav_selector_to_nav_compare"
            app:destination="@id/nav_compare"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@anim/slide_out"
            app:popEnterAnim="@anim/slide_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_nav_selector_to_nav_today"
            app:destination="@id/nav_today"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@anim/slide_out"
            app:popEnterAnim="@anim/slide_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_nav_selector_to_vaccineFragment"
            app:destination="@id/vaccineFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@anim/slide_out"
            app:popEnterAnim="@anim/slide_in"
            app:popExitAnim="@android:anim/fade_out"  />
    </fragment>
    <fragment
        android:id="@+id/nav_authors"
        android:name="com.drzymalski.covidinfo.ui.authors.AuthorsFragment"
        android:label="AUTHORS"
        tools:layout="@layout/fragment_authors" >
        <action
            android:id="@+id/action_nav_authors_to_nav_selector"
            app:destination="@id/nav_selector"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>
    <fragment
        android:id="@+id/vaccineFragment"
        android:name="com.drzymalski.covidinfo.ui.vaccine.VaccineFragment"
        android:label="fragment_vaccine"
        tools:layout="@layout/fragment_vaccine" >
        <action
            android:id="@+id/action_vaccineFragment_to_nav_selector"
            app:destination="@id/nav_selector"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>
</navigation>